@@ -174,34 +174,34 @@
      </para>
    
      <para>
-       Robots are vulnerable because they will be destroyed if they collide 
-       into each other. They will also be destroyed if they collide with the 
-       debris of some other collision. 
-     </para>    
+       Robots are destroyed when they collide with each other, or when they
+       collide with the debris of some previous collision. You die if a robot
+       ends up right next to you.
+     </para>
 
      <para> In some of the game configurations (you can choose from
-       between five different sets of rules), you can push the
-       junkheaps around to form barricades to protect you. Also if you
-       are daring enough you can Splat! the robots by pushing
+       five different sets of rules), you can push the
+       junkheaps around to form barricades to protect you. Also, if you
+       are daring enough, you can Splat! the robots by pushing
        junkheaps on top of them for an additional bonus.  </para>
      <para>
        You can also save yourself by teleporting yourself to a random location. 
-       Unfortunately, randomly teleporting means that there is a chance that
-       you might end up being right next to a robot so they can kill you when
-       they  make their move. All is not lost however, as there are also
+       Unfortunately, randomly teleporting means that
+       you might end up being right next to a robot, so they can kill you when
+       they make their move. Luckily, there are also
        safe teleports which will place you out of immediate danger, but
-       there are only a limited supply of these. You can earn
-       more free teleports as you go along, how you gain them depends on the 
-       chosen game, but typically you get one for each robot that is
+       there are only a limited supply of them. You can earn
+       more free teleports as you go along (how you gain them depends on the 
+       chosen game), but typically you get one for each robot that is
        destroyed while you are 'waiting', up to a maximum of 10. If you don't
-       want to waste your saved up safe teleports you can choose to randomly
-       teleport if you think it's safe enough. 
+       want to waste your saved-up safe teleports, you can choose to teleport
+       randomly if you think it's safe enough. 
      </para>
    
      <para>
        If you press the 'Wait' button (see below) you will no longer be able to
-       move until either all of the robots, which still move towards you, are
-       gone or you are killed. Doing this is risky, but may earn you extra 
+       move until either all of the robots (which still move towards you) are
+       gone, or you are killed. Doing this is risky, but may earn you extra 
        safe teleports.
      </para>
    
@@ -258,7 +258,7 @@
         To move, either click in the direction you want to move (the
         cursor will show you which way you will go) or press the
         appropriate arrow on the keypad. Clicking on the little man
-        will keep you still. To teleport, safely or unsafely, and to
+        will keep you still. To teleport (safely or unsafely), and to
         wait, use the buttons on the toolbar.
 	</para>
     </sect2>
@@ -377,7 +377,7 @@
       </title>
       <para>
         When you select this set, you use the numeric keypad on the
-        right hand side of the keyboard (not the separate arrow keys).
+        right-hand side of the keyboard (not the separate arrow keys).
         <note>
         <title>Switch on the NumLock Key</title>
           <para>
@@ -416,7 +416,7 @@
             Teleport: <keycap>+</keycap>	      
           </para></listitem>
           <listitem><para>
-            Ramdomly Teleport: <keycap>-</keycap>	      
+            Randomly Teleport: <keycap>-</keycap>	      
           </para></listitem>
           <listitem><para>
             Wait: <keycap>Return</keycap>	      
@@ -431,7 +431,7 @@
       Left Hand Keys 
       </title>
       <para>
-         These keys are laid out on the left hand side of the keyboard.
+         These keys are laid out on the left-hand side of the keyboard.
       </para>
     <orderedlist>
           <listitem><para>
@@ -465,7 +465,7 @@
             Teleport: <keycap>T</keycap>	      
           </para></listitem>
           <listitem><para>
-            Ramdomly Teleport: <keycap>R</keycap>	      
+            Randomly Teleport: <keycap>R</keycap>	      
           </para></listitem>
           <listitem><para>
             Wait: <keycap>Return</keycap>	      
@@ -485,8 +485,8 @@
     
     <para>
       These keys are the controls used in the original robots
-      game. They will be familiar to people who have played other
-      older text-based games.
+      game. They will be familiar to people who have played the
+      older text-based versions.
     </para>
         <orderedlist>
           <listitem>
@@ -522,7 +522,7 @@
             Teleport: <keycap>T</keycap>	      
           </para></listitem>
           <listitem><para>
-            Ramdomly Teleport: <keycap>R</keycap>	      
+            Randomly Teleport: <keycap>R</keycap>	      
           </para></listitem>
           <listitem><para>
             Wait: <keycap>W</keycap>	      
@@ -560,8 +560,8 @@
           <listitem><para> The safe moves option will help you to
 	    avoid being killed due to a mistake.  If you try to make a
 	    move that would lead to your death when there is a safe
-	    move available you will not be allowed to procceed. But be
-	    warned if there was no safe move available, other than
+	    move available, you will not be allowed to proceed. But be
+	    warned: if there was no safe move available, other than
 	    teleporting, the move will be allowed to proceed.
 	      
           </para></listitem>
@@ -602,7 +602,7 @@
         <para>
 	    <guimenuitem>Keyboard</guimenuitem> &mdash;
           This screen allows you to define your own keyboard
-          controls. The three pre-defined sets at the bottom have been
+          controls. The three pre-defined sets at the bottom were
           described in the previous section. To select a different key
           for a command, click on the button for that command and then
           press the key you want to use.
@@ -612,7 +612,7 @@
     </para>
 
     <para>
-Any changes you make take immediate effect and are automatically saved.
+Any changes you make take effect immediately and are automatically saved.
 </para>
 
     <para>
@@ -620,8 +620,8 @@ Any changes you make take immediate effect and are automatically saved.
       files are found in
       <filename class="directory">
       $PREFIX/share/pixmaps/gnobots2
-      </filename>, where $PREFIX depends on where GNOME
-      was installed, usually either 
+      </filename>, where $PREFIX is the prefix into which GNOME
+      was installed. This is usually either 
       <filename class="directory">/usr</filename>
       or 
       <filename class="directory">/usr/local</filename>.
@@ -633,7 +633,7 @@ Any changes you make take immediate effect and are automatically saved.
       animated sequences.
     </para>
     <para>
-      Any graphics files which are placed in the directory are auto-detected
+      Any graphics files which are placed in the directory are auto-detected,
       so you don't need to alter any configuration files.
       You can also define your own game configurations by creating extra
       <filename>
